--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -189,7 +189,7 @@ html{
             overflow-x: auto;
 
             .content-loader{
-                min-height: 75vh;
+                // min-height: 75vh;
                 width: 100%;
                 order: 2;
 
