--- a/public/css/user/index.scss
+++ b/public/css/user/index.scss
@@ -13,25 +13,74 @@
     }
 
     .top{
-        width: 100%;
+        width: 50%;
         display: flex;
-        flex-flow: row;
+        flex-flow: column;
         justify-content: space-between;
         align-items: flex-end;
-        gap: 1rem;
+        gap: .5rem;
         background: gray;
         padding: .5rem;
+        position: fixed;
+        top: 40.5px;
+        right: 0rem;
+        transform: translateX(0%);
+        transition: all 1s;
+        z-index: 500;
 
-        // .form-group{
-        //     width: 100%;
-        // }
         .search{
             flex-grow: 10;
+            width: 100%;
+            order: 2;
         }
 
         .select{
             flex-grow: 1;
+            width: 100%;
+            order: 2;
         }
+
+        a{
+            order: 1;
+        }
+
+        .filter-show{
+            position: fixed;
+            top: 0rem;
+            left: .5rem;
+            transform: translateX(-100%);
+            cursor: pointer;
+            transition: all 0s .2s;
+            background: gray;
+            padding: 0rem .5rem;
+
+            &:hover{
+                color: blue;
+
+                svg{
+                    stroke: blue;
+                    fill: blue;
+                }
+            }
+
+            svg{
+                transition: all 0s .2s;
+                transform: scale(.5) rotateY(180deg);
+                stroke: white;
+                fill: white;
+            }
+        }
+
+        .filter-close{
+            svg{
+                transform: scale(.5) rotateY(0deg);
+            }
+        }
+    }
+
+    .top-hide{
+        transition: all 1s;
+        transform: translateX(100%);
     }
 
     .table-container{
@@ -65,3 +114,38 @@
     }
 }
 
+@media screen and (min-width: 920px) {
+    .user-index{
+        .top{
+            position: static;
+            flex-flow: row;
+            width: 100%;
+
+            .search{
+                flex-grow: 10;
+                order: 1;
+            }
+
+            .select{
+                flex-grow: 1;
+                order: 1;
+            }
+
+            a{
+                order: 2;
+            }
+
+            .filter-show{
+                display: none;
+            }
+
+            .filter-close{
+                display: none;
+            }
+        }
+
+        .top-hide{
+            transform: translateX(0%);
+        }
+    }
+}
