--- a/public/css/user/index.css
+++ b/public/css/user/index.css
@@ -11,20 +11,63 @@
   padding-bottom: 0rem;
 }
 .user-index .top {
-  width: 100%;
+  width: 50%;
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   justify-content: space-between;
   align-items: flex-end;
-  gap: 1rem;
+  gap: 0.5rem;
   background: gray;
   padding: 0.5rem;
+  position: fixed;
+  top: 40.5px;
+  right: 0rem;
+  transform: translateX(0%);
+  transition: all 1s;
+  z-index: 500;
 }
 .user-index .top .search {
   flex-grow: 10;
+  width: 100%;
+  order: 2;
 }
 .user-index .top .select {
   flex-grow: 1;
+  width: 100%;
+  order: 2;
+}
+.user-index .top a {
+  order: 1;
+}
+.user-index .top .filter-show {
+  position: fixed;
+  top: 0rem;
+  left: 0.5rem;
+  transform: translateX(-100%);
+  cursor: pointer;
+  transition: all 0s 0.2s;
+  background: gray;
+  padding: 0rem 0.5rem;
+}
+.user-index .top .filter-show:hover {
+  color: blue;
+}
+.user-index .top .filter-show:hover svg {
+  stroke: blue;
+  fill: blue;
+}
+.user-index .top .filter-show svg {
+  transition: all 0s 0.2s;
+  transform: scale(0.5) rotateY(180deg);
+  stroke: white;
+  fill: white;
+}
+.user-index .top .filter-close svg {
+  transform: scale(0.5) rotateY(0deg);
+}
+.user-index .top-hide {
+  transition: all 1s;
+  transform: translateX(100%);
 }
 .user-index .table-container {
   width: 100%;
@@ -47,4 +90,32 @@
 .user-index .table-container table .center {
   vertical-align: middle;
   text-align: center;
+}
+
+@media screen and (min-width: 920px) {
+  .user-index .top {
+    position: static;
+    flex-flow: row;
+    width: 100%;
+  }
+  .user-index .top .search {
+    flex-grow: 10;
+    order: 1;
+  }
+  .user-index .top .select {
+    flex-grow: 1;
+    order: 1;
+  }
+  .user-index .top a {
+    order: 2;
+  }
+  .user-index .top .filter-show {
+    display: none;
+  }
+  .user-index .top .filter-close {
+    display: none;
+  }
+  .user-index .top-hide {
+    transform: translateX(0%);
+  }
 }/*# sourceMappingURL=index.css.map */
