--- a/public/css/default/index.css
+++ b/public/css/default/index.css
@@ -38,6 +38,7 @@ html body header nav .logo {
   font-weight: bold;
   font-size: 1.6875rem;
   animation: logo 3s linear 1s infinite alternate-reverse forwards;
+  text-align: center;
 }
 html body header nav .logo:hover {
   -webkit-animation: none;
@@ -68,11 +69,10 @@ html body header nav ul li:hover {
 }
 html body header nav .center-ul {
   position: fixed;
-  top: 0rem;
   left: 0rem;
   background: black;
   width: 100%;
-  transform: translateY(40.5px) translateX(-100%);
+  transform: translateX(-100%);
   transition: all 1s ease-in-out;
 }
 html body header nav .center-ul li {
@@ -81,16 +81,15 @@ html body header nav .center-ul li {
   text-align: center;
 }
 html body header nav .center-ul-show {
-  transform: translateY(40.5px) translateX(0%);
+  transform: translateX(0%);
   transition: all 1s ease-in-out;
 }
 html body header nav .center-ul-open {
   display: block;
   position: fixed;
-  top: 0rem;
   left: 0rem;
   padding: 0rem;
-  transform: translateY(40.5px);
+  transform: translateY(0);
   cursor: pointer;
   transition: all 1s ease-in-out;
 }
@@ -102,7 +101,7 @@ html body header nav .center-ul-open svg {
 }
 html body header nav .center-ul-close {
   left: 100%;
-  transform: translateY(40.5px) translateX(-100%);
+  transform: translateX(-100%);
   transition: all 1s ease-in-out;
 }
 html body header nav .center-ul-close svg {
@@ -113,18 +112,19 @@ html body header nav .right-trigger {
   padding: 0.5rem 0rem;
   font-style: italic;
   cursor: pointer;
+  text-align: center;
 }
 html body header nav .right-trigger:hover {
   color: blue;
 }
 html body header nav .right-ul {
   position: absolute;
-  top: 40.5px;
   right: 0rem;
   display: flex;
   flex-flow: column;
   background: black;
   color: white;
+  background: gray;
   transition: all 0.5s ease-in-out;
 }
 html body header nav .right-ul li {
@@ -141,7 +141,7 @@ html body main {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40.5px;
+  margin-top: 81px;
   height: 50vh;
 }
 html body main h1 {
@@ -158,7 +158,6 @@ html body .content-body {
   justify-content: space-between;
   align-items: flex-start;
   gap: 0.5rem;
-  padding: 1.5625rem 0rem;
   overflow-x: auto;
 }
 html body .content-body .content-loader {
