--- a/public/css/adjustment/index.scss
+++ b/public/css/adjustment/index.scss
@@ -21,7 +21,7 @@
         justify-content: space-between;
         align-items: flex-end;
         position: fixed;
-        top: 40.5px;
+        top: 81px;
         right: 0rem;
         transform: translateX(0%);
         transition: all 1s;
@@ -62,6 +62,10 @@
                 .form-group{
                     width: 100%;
                 }
+            }
+
+            .dates{
+                flex-flow: column;
             }
         }
 
@@ -135,6 +139,18 @@
             .center{
                 vertical-align: middle;
                 text-align: center;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .adjustment-index{
+        .top{
+            .rows{
+                .dates{
+                    flex-flow: row;
+                }
             }
         }
     }
