--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -3,7 +3,7 @@ html{
 
     body{
         overflow-x: auto;
-        padding: 1rem;
+        padding: .5rem;
         background: black;
         color: white;
 
@@ -421,6 +421,8 @@ html{
 @media screen and (min-width: 920px) {
     html{
         body{
+            padding: 1rem;
+
             header {
                 nav {
                     ul{
