--- a/public/css/month/show.scss
+++ b/public/css/month/show.scss
@@ -7,12 +7,18 @@
 
     .top{
         display: flex;
-        justify-content: space-between;
+        flex-flow: column;
+        justify-content: center;
         align-items: center;
+        gap: .5rem;
 
         h2{
-            margin-left: 50%;
-            transform: translateX(-50%);
+            // order: 2;
+            // width: 100%;
+        }
+
+        .btn-container{
+            // order: 1;
         }
     }
 
@@ -23,20 +29,21 @@
         align-items: center;
         width: 100%;
         gap: .5rem;
+        padding: 1rem 0rem;
 
         label{
             display: flex;
             flex-flow: row;
             justify-content: space-between;
             align-items: center;
-            min-width: 500px;
-            max-width: 100%;
+            width: 100%;
             font-weight: bold;
             border-bottom: .1rem dashed gray;
 
             span{
                 font-weight: normal;
                 font-style: italic;
+                text-align: right;
             }
         }
     }
@@ -113,8 +120,7 @@
         align-items: center;
 
         form{
-            min-width: 500px;
-            max-width: 95%;
+            width: 95%;
             background: black;
             padding: 1rem;
             border-radius: .25rem;
@@ -136,5 +142,50 @@
 
     .hide{
         display: none;
+    }
+}
+
+@media screen and (min-width: 640px) {
+    .month-show{
+        .top{
+            flex-flow: row;
+            justify-content: space-between;
+
+            h2{
+                transform: translateX(-40%);
+                margin-left: 40%;
+            }
+        }
+
+        .info-container{
+            label{
+                width: 90%;
+                max-width: 500px;
+            }
+        }
+
+        .month-delete-div{
+            form{
+                width: 500px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .hide-in-low-res{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 920px) {
+    .month-show{
+        .top{
+
+            h2{
+                margin-left: 50%;
+                transform: translateX(-50%);
+            }
+        }
     }
 }
