--- a/public/css/notice/show.css
+++ b/public/css/notice/show.css
@@ -5,49 +5,42 @@
 }
 .notice-show .top {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 0.5rem;
-}
-.notice-show .top h2 {
-  margin-left: 50%;
-  transform: translateX(-50%);
-}
-.notice-show .details-container {
-  display: flex;
+  flex-flow: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  gap: 0.5rem;
 }
-.notice-show .details-container .info-container {
+.notice-show .info-container {
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
   background: black;
   color: white;
+  padding: 1rem 0rem;
 }
-.notice-show .details-container .info-container h3 {
+.notice-show .info-container h3 {
   text-align: center;
   color: goldenrod;
 }
-.notice-show .details-container .info-container .body {
-  max-width: 100%;
+.notice-show .info-container .body {
+  width: 100%;
+  text-align: justify;
 }
-.notice-show .details-container .info-container .footer {
+.notice-show .info-container .footer {
   width: 100%;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: flex-end;
 }
-.notice-show .details-container .info-container .footer .admin {
+.notice-show .info-container .footer .admin {
   font-size: larger;
   font-weight: bolder;
   font-style: italic;
   color: red;
 }
-.notice-show .details-container .info-container .footer .date {
+.notice-show .info-container .footer .date {
   color: red;
 }
 .notice-show .notice-delete-div {
@@ -63,8 +56,7 @@
   align-items: center;
 }
 .notice-show .notice-delete-div form {
-  min-width: 500px;
-  max-width: 95%;
+  width: 95%;
   background: black;
   padding: 1rem;
   border-radius: 0.25rem;
@@ -82,4 +74,28 @@
 }
 .notice-show .hide {
   display: none;
+}
+
+@media screen and (min-width: 640px) {
+  .notice-show .top {
+    flex-flow: row;
+    justify-content: space-between;
+  }
+  .notice-show .top h2 {
+    transform: translateX(-40%);
+    margin-left: 40%;
+  }
+  .notice-show .info-container label {
+    width: 90%;
+    max-width: 500px;
+  }
+  .notice-show .notice-delete-div form {
+    width: 500px;
+  }
+}
+@media screen and (min-width: 920px) {
+  .notice-show .top h2 {
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
 }/*# sourceMappingURL=show.css.map */
