--- a/public/css/user/show.css
+++ b/public/css/user/show.css
@@ -5,19 +5,17 @@
 }
 .user-show .top {
   display: flex;
-  justify-content: space-between;
+  flex-flow: column;
+  justify-content: center;
   align-items: center;
-}
-.user-show .top h2 {
-  margin-left: 50%;
-  transform: translateX(-50%);
+  gap: 0.5rem;
 }
 .user-show .image-viewer {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 0rem;
 }
 .user-show .image-viewer img {
   min-width: 200px;
@@ -26,62 +24,28 @@
   border-radius: 50%;
   margin: 0.5rem solid gray;
 }
-.user-show .details-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-.user-show .details-container .info-container {
-  flex-grow: 5;
+.user-show .info-container {
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
   gap: 0.5rem;
+  padding: 1rem 0rem;
 }
-.user-show .details-container .info-container label {
+.user-show .info-container label {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
-  min-width: 500px;
-  max-width: 100%;
+  width: 100%;
   font-weight: bold;
   border-bottom: 0.1rem dashed gray;
 }
-.user-show .details-container .info-container label span {
+.user-show .info-container label span {
   font-weight: normal;
   font-style: italic;
-}
-.user-show .details-container .payment-details {
-  flex-grow: 3;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-}
-.user-show .details-container .payment-details table {
-  min-width: 500px;
-  max-width: 50%;
-}
-.user-show .details-container .payment-details table th {
-  vertical-align: middle;
-  text-align: center;
-}
-.user-show .details-container .payment-details table .clickable {
-  cursor: pointer;
-}
-.user-show .details-container .payment-details table .left {
-  vertical-align: middle;
-  text-align: left;
-}
-.user-show .details-container .payment-details table .right {
-  vertical-align: middle;
   text-align: right;
-}
-.user-show .details-container .payment-details table .center {
-  vertical-align: middle;
-  text-align: center;
 }
 .user-show .user-delete-div {
   position: fixed;
@@ -96,8 +60,7 @@
   align-items: center;
 }
 .user-show .user-delete-div form {
-  min-width: 500px;
-  max-width: 95%;
+  width: 95%;
   background: black;
   padding: 1rem;
   border-radius: 0.25rem;
@@ -115,4 +78,28 @@
 }
 .user-show .hide {
   display: none;
+}
+
+@media screen and (min-width: 640px) {
+  .user-show .top {
+    flex-flow: row;
+    justify-content: space-between;
+  }
+  .user-show .top h2 {
+    transform: translateX(-40%);
+    margin-left: 40%;
+  }
+  .user-show .info-container label {
+    width: 90%;
+    max-width: 500px;
+  }
+  .user-show .user-delete-div form {
+    width: 500px;
+  }
+}
+@media screen and (min-width: 920px) {
+  .user-show .top h2 {
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
 }/*# sourceMappingURL=show.css.map */
