--- a/public/css/user/show.scss
+++ b/public/css/user/show.scss
@@ -1,4 +1,3 @@
-
 .user-show{
     h2,h3{
         margin: 0rem;
@@ -8,13 +7,10 @@
 
     .top{
         display: flex;
-        justify-content: space-between;
+        flex-flow: column;
+        justify-content: center;
         align-items: center;
-
-        h2{
-            margin-left: 50%;
-            transform: translateX(-50%);
-        }
+        gap: .5rem;
     }
 
     .image-viewer{
@@ -22,7 +18,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 1rem;
+        padding: 1rem 0rem;
 
         img{
             min-width: 200px;
@@ -33,71 +29,28 @@
         }
     }
 
-    .details-container{
+    .info-container{
         display: flex;
+        flex-flow: column;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
+        width: 100%;
+        gap: .5rem;
+        padding: 1rem 0rem;
 
-        .info-container{
-            flex-grow: 5;
+        label{
             display: flex;
-            flex-flow: column;
-            justify-content: center;
+            flex-flow: row;
+            justify-content: space-between;
             align-items: center;
-            // width: 100%;
-            gap: .5rem;
+            width: 100%;
+            font-weight: bold;
+            border-bottom: .1rem dashed gray;
 
-            label{
-                display: flex;
-                flex-flow: row;
-                justify-content: space-between;
-                align-items: center;
-                min-width: 500px;
-                max-width: 100%;
-                font-weight: bold;
-                border-bottom: .1rem dashed gray;
-
-                span{
-                    font-weight: normal;
-                    font-style: italic;
-                }
-            }
-        }
-
-        .payment-details{
-            flex-grow: 3;
-            display: flex;
-            flex-flow: column;
-            justify-content: center;
-            align-items: center;
-
-            table{
-                min-width: 500px;
-                max-width: 50%;
-
-                th{
-                    vertical-align: middle;
-                    text-align: center;
-                }
-
-                .clickable{
-                    cursor: pointer;
-                }
-
-                .left{
-                    vertical-align: middle;
-                    text-align: left;
-                }
-
-                .right{
-                    vertical-align: middle;
-                    text-align: right;
-                }
-
-                .center{
-                    vertical-align: middle;
-                    text-align: center;
-                }
+            span{
+                font-weight: normal;
+                font-style: italic;
+                text-align: right;
             }
         }
     }
@@ -115,8 +68,7 @@
         align-items: center;
 
         form{
-            min-width: 500px;
-            max-width: 95%;
+            width: 95%;
             background: black;
             padding: 1rem;
             border-radius: .25rem;
@@ -141,3 +93,41 @@
     }
 }
 
+@media screen and (min-width: 640px) {
+    .user-show{
+        .top{
+            flex-flow: row;
+            justify-content: space-between;
+
+            h2{
+                transform: translateX(-40%);
+                margin-left: 40%;
+            }
+        }
+
+        .info-container{
+            label{
+                width: 90%;
+                max-width: 500px;
+            }
+        }
+
+        .user-delete-div{
+            form{
+                width: 500px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 920px) {
+    .user-show{
+        .top{
+
+            h2{
+                margin-left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+    }
+}
